compiler/test/compilable/test23342.i
/* REQUIRED_ARGS: -betterC
 */

// https://issues.dlang.org/show_bug.cgi?id=23342

void test()
{
    int* p = (int[]){4};
}
